src/test/ui/error-codes/E0697.stderr
error[E0697]: closures cannot be static
  --> $DIR/E0697.rs:2:5
   |
LL |     static || {};
   |     ^^^^^^^^^ help: consider removing the: `static`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0697`.
