src/test/ui/error-codes/E0697.rs
fn main() {
    static || {}; //~ ERROR E0697
}
